fix(template): remove overflow hidden for dg-link

--- a/packages/template/src/styles/sidebar.scss
+++ b/packages/template/src/styles/sidebar.scss
@@ -51,7 +51,7 @@
             }
             & > .item-content-label {
                 flex: 0 0 auto;
-                background-color: white;
+                background-color: $dg-white;
                 display: flex;
                 border-radius: 4px;
             }
